Fix overflow for smaller screens.

--- a/src/components/homepage/Hero.module.scss
+++ b/src/components/homepage/Hero.module.scss
@@ -24,6 +24,7 @@
 
   @include small-size {
     padding: 0;
+    overflow: hidden;
   }
 }
 
