--- a/src/css/custom.scss
+++ b/src/css/custom.scss
@@ -178,6 +178,7 @@ h1, h2, h3, h4, h5 {
   .main-wrapper .container {
     margin-left: 20px;
     margin-right: 0px;
+    padding-right: 20px
   }
 }
 
